--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.25",
-    "next": "16.0.3",
+    "next": "^16.0.8",
     "nodemailer": "^7.0.11",
     "react": "19.2.0",
     "react-countup": "^6.5.3",
@@ -18,14 +18,14 @@
     "react-intersection-observer": "^10.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
-    "tailwindcss": "^4",
+    "eslint-config-next": "^16.0.8",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
 }
