--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "19.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
-    "react-intersection-observer": "^10.0.0"
+    "react-intersection-observer": "^10.0.0",
+    "react-swipeable": "^7.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
