--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
     "react-intersection-observer": "^10.0.0",
-    "react-swipeable": "^7.0.2"
+    "react-swipeable": "^7.0.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
